removes unussed social links corrects image sizes fixes text align in speakers page modifies venues text size

--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -13,7 +13,7 @@
         margin: 1em 0
         a
             color: #848484
-            font-size: 1.4em
+            font-size: 1.8em
             margin: .2em
     hr
         border: none
