--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -207,7 +207,7 @@ a
       background-repeat: no-repeat
       background-size: cover
       display: block
-      height: 13.5em
+      height: 17.5em
       width: 100%
       @media screen and (max-width: 580px)
         height: 18.5em
