--- a/_sass/speaker.sass
+++ b/_sass/speaker.sass
@@ -59,7 +59,7 @@
                     color: #868688
                     font-weight: 500
                     font-size: 1em
-                    text-align: center
+                    text-align: left
                     margin: 1.5em 1em 1em 1em
                     width: 80%
                     @media only screen and (max-width: 1112px)
